src/main/default/objects/Contact_Qualification__c/Contact_Qualification__c.object-meta.xml
<CustomObject>
    <label>Contact Qualification</label>
    <nameField>
        <label>Contact Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>