src/main/default/objects/Contact_Qualification__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Date from which the qualification is valid.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>