src/main/default/objects/Contact_Qualification__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Date the qualification expires.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>