src/main/default/objects/Contact_Qualification__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <inlineHelpText>Qualification held by the employee.</inlineHelpText>
    <label>Qualification</label>
    <referenceTo>Qualification__c</referenceTo>
    <relationshipLabel>Contact Qualifications</relationshipLabel>
    <relationshipName>Contact_Qualifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>